Champion `key` is now included in API results for champion and game endpoints. This key is used to query DataDragon assets. ex. Wukong's key is 'MonkeyKing'.

--- a/TODO.txt
+++ b/TODO.txt
@@ -67,3 +67,6 @@
 - Profile Riot API request usage.
 
 - Testing!
+
+- Consider adding summoner whose history was queried to player_set for their games, so as
+  to unify querying of match participant data (for displaying in frontend).
