--- a/TODO.txt
+++ b/TODO.txt
@@ -75,4 +75,9 @@
 
 - Implement time-elapsed-since-last-update checks for everything. (e.g. wider usage of CACHE_SUMMONER)
 
-- Return HTTP 404 instead of raising HTTP 500 when objects not found by API endpoints.
+- Return HTTP 404 instead of raising HTTP 500 when objects not found by our API endpoints.
+
+- Teams can be in multiple leagues, ex. single team plays 3v3 and 5v5. This can cause problems w/current implementation!
+    - Check where we assign a Team to a League; this may need to be redone if a Team can be in multiple leagues.
+    - Check serialization of Team, especially regarding `(many=False)` args.
+    - Nomenclature ("entry" vs "entries").
